@@ -237,6 +237,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 28444) Fix regression: edit-on-doubleclick retains revision id again
 * (bug 28485) Block::purgeExpired Database returned error "1205: Lock wait timeout
   exceeded;"
+* (bug 20468) User::invalidateCache throws 1205: Lock wait timeout exceeded
 
  === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
